introduce modularity (#55)